--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
+    <style>
+        h1 {
+            margin left 100px
+        }
+    </style>
 <body>
     <h1>homepage</h1>
     <hr>
