--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
     <style>
         h1 {
-            margin left 100px
+            margin left: 100px
         }
     </style>
 <body>
