--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             <h3 id = "intro">Introduction</h3>
             <table>
                 <tbody>
-                    <tr><td><img src= "Image/profile.jpg" width="200px"></td><td>이름: 박민주 <br>학력: 상명대학교<br><br><br><br><br><br><br><br><br><br>
+                    <tr><td><img src= "Image/profile.jpg" width="200px"></td><td>이름: 박민주 <br>학력: 상명대학교 휴먼지능정보공학
+                        <br><br><br><br><br><br><br><br><br><br>
                     </td></tr>
                 </tbody>
             </table>
@@ -76,7 +77,8 @@
             <h3 id = "profile">profile</h3><br><br>
         </div>
         <div>
-            <h3 id = "portfolio">Portfolio</h3><br><br>
+            <h3 id = "portfolio">Portfolio</h3>
+            <a href="/numberbaseball/main.html"><img src="Image/baseball.png" style = "border-radius: 10px; width: 150px;"></a>
         </div>
         <div>
             <h3 id = "photo">Photo</h3><br><br>
