--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div>
             <h3 id = "portfolio">Portfolio</h3>
-            <a href="/numberbaseball/main.html"><img src="/baseball.png" style = "border-radius: 10px; width: 150px;"></a>
+            <a href="/numberbaseball/main.html"><img src="baseball.png" style = "border-radius: 10px; width: 150px;"></a>
         </div>
         <div>
             <h3 id = "photo">Photo</h3><br><br>
